--- a/interface/i18n/mist.nl.i18n.json
+++ b/interface/i18n/mist.nl.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "Over __app__",
                 "checkForUpdates": "Op updates controleren...",
-                "checkForNodeUpdates": "Controleer op Ethereum node updates...",
+                "checkForNodeUpdates": "Controleer op WhaleCoin node updates...",
                 "services": "Diensten",
                 "hide": "__app__ verbergen",
                 "hideOthers": "Andere verbergen",
@@ -63,7 +63,7 @@
                 "logFiles": "Toon log bestand",
                 "openRemix": "Open Remix IDE",
                 "externalNode": "Externe Node in gebruik",
-                "ethereumNode": "Ethereum Node",
+                "ethereumNode": "WhaleCoin Node",
                 "network": "Netwerk",
                 "nodeMode": "Chain download",
                 "fullNode": "Bewaar volledige blockchain",
@@ -88,7 +88,7 @@
             "nodeStartup": "Het lijkt erop dat de node niet kan worden opgestart, draait er al een? Is deze de database aan het upgraden?",
             "timeSync": {
                 "title": "Je computer's klok is niet gesynchroniseerd.",
-                "description": "Om succesvol met het Ethereum netwerk te verbinden moet je computer's klok gesynchroniseerd zijn met een tijdssynchronisatie server.",
+                "description": "Om succesvol met het WhaleCoin netwerk te verbinden moet je computer's klok gesynchroniseerd zijn met een tijdssynchronisatie server.",
                 "win32": "Ga naar je Internet Tijd Instellingen in je configuratiescherm en selecteer de optie. Zie deze uitleg voor details: http://www.guidingtech.com/3119/windows-clock-sync/",
                 "linux": "Installeer voor een tijdssynchronisatieserver \"ntp\" via \"apt-get install ntp\".",
                 "darwin": "Zet tijdssynchronisatie aan door in je instellingen de optie \"Tijd en datum automatisch instellen\" te activeren."
@@ -99,7 +99,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain gedetecteerd",
-                "description": "Je node draait momenteel op de niet ondersteunde Ethereum Classic chain. Om deze chain te gebruiken dien je de tools te gebruiken van het Ethereum Classic project op\nhttps://ethereumclassic.github.io.\n\nOm terug te gaan naar de standaard Ethereum chain kun je deze tutorial volgen:\nhttps://github.com/ethereum/mist/releases/0.8.2"
+                "description": "Je node draait momenteel op de niet ondersteunde WhaleCoin Classic chain. Om deze chain te gebruiken dien je de tools te gebruiken van het WhaleCoin Classic project op\nhttps://ethereumclassic.github.io.\n\nOm terug te gaan naar de standaard WhaleCoin chain kun je deze tutorial volgen:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -116,7 +116,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "Je zit op het main Ethereum wereldwijde netwerk",
+            "mainnetExplain": "Je zit op het main WhaleCoin wereldwijde netwerk",
             "testnetExplain": "Je bent actief op het __name__, VERSTUUR GEEN echte Ether naar deze adressen",
             "privatenetExplain": "Je zit op een private net, VERSTUUR GEEN echte Ether naar deze adressen",
             "unknownnetExplain": "Niet in staat om te bepalen op welk netwerk je zit",
@@ -134,20 +134,20 @@
             }
         },
         "startScreen": {
-            "runningNodeFound": "Lopende Ethereum node gevonden!",
-            "startingNode": "Ethereum node starten...",
-            "stoppingNode": "Ethereum node stoppen...",
+            "runningNodeFound": "Lopende WhaleCoin node gevonden!",
+            "startingNode": "WhaleCoin node starten...",
+            "stoppingNode": "WhaleCoin node stoppen...",
             "startedNode": "Applicatie starten...",
-            "nodeConnectionTimeout": "Ethereum node opstarten niet mogelijk!<br><small>Als je <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'>Geth geinstalleerd hebt</a>, gebruik dan dit commando om het op te starten: <br> <code>geth --ipcpath __path__</code></small><br> <small><a href='https://github.com/ethereum/mist/issues' class='button' target='_blank'> Of meld een fout </a></small>",
-            "nodeBinaryNotFound": "Geen Ethereum node gevonden!<br><small> <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'> Start er a.u.b. handmatig een. </a> </small>",
-            "nodeStarting": "Ethereum node opstarten...",
-            "nodeStarted": "Ethereum node gestart",
-            "nodeConnected": "Ethereum node verbonden",
-            "nodeStopping": "Ethereum node afsluiten...",
-            "nodeStopped": "Ethereum node gestopt",
-            "nodeError": "Ethereum node verbindingsfout :'(",
-            "unableToBindPort": "Ethereum node kan niet opstarten. Draait er al een?",
-            "nodeSyncing": "Ethereum node moet synchroniseren, even geduld alstublieft...",
+            "nodeConnectionTimeout": "WhaleCoin node opstarten niet mogelijk!<br><small>Als je <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>Geth geinstalleerd hebt</a>, gebruik dan dit commando om het op te starten: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Of meld een fout </a></small>",
+            "nodeBinaryNotFound": "Geen WhaleCoin node gevonden!<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Start er a.u.b. handmatig een. </a> </small>",
+            "nodeStarting": "WhaleCoin node opstarten...",
+            "nodeStarted": "WhaleCoin node gestart",
+            "nodeConnected": "WhaleCoin node verbonden",
+            "nodeStopping": "WhaleCoin node afsluiten...",
+            "nodeStopped": "WhaleCoin node gestopt",
+            "nodeError": "WhaleCoin node verbindingsfout :'(",
+            "unableToBindPort": "WhaleCoin node kan niet opstarten. Draait er al een?",
+            "nodeSyncing": "WhaleCoin node moet synchroniseren, even geduld alstublieft...",
             "nodeSyncInfo": "Blok __currentBlock__ van __highestBlock__ aan het downloaden.",
             "nodeSyncInfoStates": "Blok __displayBlock__ van __highestBlock__ aan het downloaden, <br> Chain structuur __displayState__ van __displayKnownStates__ aan het downloaden",
             "nodeSyncConnecting": "Zoeken naar peers...",
@@ -159,7 +159,7 @@
                 "downloading": "Downloaden van nieuwe node...",
                 "loadConfig": "Laden van client config...",
                 "filtering": "Filteren van client binaries...",
-                "done": "Ethereum node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Fout bij het uitvoeren van de gedownloade binary."
             }
         },
@@ -232,13 +232,13 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount."
             },
             "onboarding": {
-                "description": "Ethereum is een decentraal platform voor het bouwen van applicaties op een blockchain: software die immuun is voor fraude en levenslang waarde en eigendom over kan brengen",
+                "description": "WhaleCoin is een decentraal platform voor het bouwen van applicaties op een blockchain: software die immuun is voor fraude en levenslang waarde en eigendom over kan brengen",
                 "goToTestnet": "Gebruik het test netwerk (Rinkeby)",
                 "goToTestnetDescription": "Test de technologie vrij in een testongeving, zonder echte Ether te gebruiken.",
                 "gotoMainnet": "Gebruik hoofdnetwerk",
                 "gotoMainnetDescription": "Je zult een beetje Ether nodig hebben om contracten uit te voeren. Geen zorgen, we helpen je met het verkrijgen...",
                 "doYouHaveAWalletFile": "Heb je een wallet bestand?",
-                "walletFileDescription": "<p>Als je mee hebt gedaan met de Ethereum voorverkoop van 2014 zou je een bestand met de naam <code>ethereum_wallet_backup.json</code> ontvangen moeten hebben. Je kon dit bestand downloaden na je contributie en is ook per email verstuurd</p>",
+                "walletFileDescription": "<p>Als je mee hebt gedaan met de WhaleCoin voorverkoop van 2014 zou je een bestand met de naam <code>ethereum_wallet_backup.json</code> ontvangen moeten hebben. Je kon dit bestand downloaden na je contributie en is ook per email verstuurd</p>",
                 "dropFilesHere": "Sleep voorverkoop bestand hier",
                 "creating": "Aanmaken...",
                 "importing": "Importeren...",
@@ -248,7 +248,7 @@
                 "protectDescription": "Kies een wachtwoord voor je nieuwe account. Maak het even veilig alsof het uw huissleutels zijn!",
                 "accountTitle": "Opladen!",
                 "accountTitleTestnet": "Mine wat!",
-                "etherDescription": "Het Ethereum netwerk is gebaseerd op het “Ether” token. Je zal een kleine hoeveelheid nodig hebben om dingen op het netwerk te doen.",
+                "etherDescription": "Het WhaleCoin netwerk is gebaseerd op het “Ether” token. Je zal een kleine hoeveelheid nodig hebben om dingen op het netwerk te doen.",
                 "loadItDescription": "Als je al Bitcoins of een andere cryptocurrency hebt kan je deze makkelijk inwisselen voor Ether met Shapeshift.<br><br> Wij raden aan een hoeveelheid van tussen de <strong>0.25 en 1 Ether</strong> om te wisselen.",
                 "mineItDescription": "<strong>Op het testnetwerk kun je zelf Ether mijnen door te gaan naar het <em>Ontwikkelaars</em> menu en te kiezen voor <em>Begin Mining</em>. </strong> <br> <strong> PROBEER GEEN ECHTE ETHER NAAR DIT ADRES TE VERSTUREN </strong>",
                 "you": "Je",
