--- a/interface/i18n/mist.zh-TW.i18n.json
+++ b/interface/i18n/mist.zh-TW.i18n.json
@@ -5,7 +5,7 @@
                 "label": "__app__",
                 "about": "關於__app__",
                 "checkForUpdates": "檢查更新...",
-                "checkForNodeUpdates": "Check for Ethereum node updates...",
+                "checkForNodeUpdates": "Check for WhaleCoin node updates...",
                 "services": "服務",
                 "hide": "隱藏 __app__",
                 "hideOthers": "隱藏其他",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported Ethereum Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/ethereum/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -100,7 +100,7 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "mainnetExplain": "You are on the main Ethereum global network",
+            "mainnetExplain": "You are on the main WhaleCoin global network",
             "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
@@ -119,20 +119,20 @@
             "runningNodeFound": "發現正在運行的以太坊節點！",
             "startingNode": "正在開啓以太坊節點……",
             "startedNode": "正在啓動應用程序……",
-            "nodeConnectionTimeout": "無法開啓以太坊節點！<br><small>如果您已經<a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'>安裝Geth</a>，使用此命令運行： <br> <code>geth --ipcpath __path__</code></small><br> <small><a href='https://github.com/ethereum/mist/issues' class='button' target='_blank'> 或者上報此問題 </a></small>",
-            "nodeBinaryNotFound": "找不到以太坊節點安裝文件！<br><small> <a href='https://www.ethereum.org/cli#geth' class='button' target='_blank'> 請事先手動開啓一個節點 </a> </small>",
+            "nodeConnectionTimeout": "無法開啓以太坊節點！<br><small>如果您已經<a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>安裝Geth</a>，使用此命令運行： <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> 或者上報此問題 </a></small>",
+            "nodeBinaryNotFound": "找不到以太坊節點安裝文件！<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> 請事先手動開啓一個節點 </a> </small>",
             "nodeSyncing": "需要同步以太坊節點，請等待……",
             "nodeSyncInfo": "正在下載第__displayBlock__塊，共__highestBlock__。",
             "nodeSyncConnecting": "正在查找節點……",
             "peerSearchTimeout": "跳過節點搜索",
-            "stoppingNode": "Stopping Ethereum node...",
-            "nodeStarting": "Ethereum node starting up...",
-            "nodeStarted": "Ethereum node started",
-            "nodeConnected": "Ethereum node connected",
-            "nodeStopping": "Ethereum node stopping...",
-            "nodeStopped": "Ethereum node stopped",
-            "nodeError": "Ethereum node connection error :'(",
-            "unableToBindPort": "Ethereum node cannot run. Is another instance already running?",
+            "stoppingNode": "Stopping WhaleCoin node...",
+            "nodeStarting": "WhaleCoin node starting up...",
+            "nodeStarted": "WhaleCoin node started",
+            "nodeConnected": "WhaleCoin node connected",
+            "nodeStopping": "WhaleCoin node stopping...",
+            "nodeStopped": "WhaleCoin node stopped",
+            "nodeError": "WhaleCoin node connection error :'(",
+            "unableToBindPort": "WhaleCoin node cannot run. Is another instance already running?",
             "nodeSyncInfoStates": "Downloading block __displayBlock__ of __highestBlock__, <br> Downloading chain structure __displayState__ of __displayKnownStates__",
             "nodeSyncFoundPeers": "Connecting to __peers__ peers...",
             "launchApp": "Launch Application",
@@ -141,7 +141,7 @@
                 "downloading": "Downloading new node...",
                 "loadConfig": "Loading client config...",
                 "filtering": "Filtering client binaries...",
-                "done": "Ethereum node up-to-date...",
+                "done": "WhaleCoin node up-to-date...",
                 "error": "Error running downloaded binary."
             }
         },
