--- a/interface/i18n/mist.es.i18n.json
+++ b/interface/i18n/mist.es.i18n.json
@@ -43,7 +43,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Ejecutar pruebas",
                 "logFiles": "Mostrar archivo de registro",
-                "ethereumNode": "Nodo de WhaleCoin",
+                "WhaleCoinNode": "Nodo de WhaleCoin",
                 "network": "Red",
                 "mainNetwork": "Red principal",
                 "startMining": "⛏ Empezar a minar (sólo Testnet)",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -94,14 +94,14 @@
             "blockReceived": "Nuevo bloque recibido",
             "blockNumber": "Su último número de bloque",
             "timeSinceBlock": "Tiempo transcurrido desde el último bloque",
-            "testnetExplain": "Estás en la red de pruebas, NO ENVÍE ningún ether real a estas direcciones",
+            "testnetExplain": "Estás en la red de pruebas, NO ENVÍE ningún WhaleCoin real a estas direcciones",
             "peers": "pares",
             "checkingWhichNetwork": "Checking network...",
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -119,8 +119,8 @@
             "runningNodeFound": "Encontrado nodo WhaleCoin funcionando!",
             "startingNode": "Iniciando el nodo WhaleCoin...",
             "startedNode": "Iniciando la aplicación...",
-            "nodeConnectionTimeout": "No se pudo iniciar un nodo WhaleCoin!<br><small>Si <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>has instalado Geth</a>, utiliza este comando para ejecutarlo: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> O informa del problema </a></small>",
-            "nodeBinaryNotFound": "No se ha encontrado el binario del nodo WhaleCoin!<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Por favor, inicie antes uno manualmente. </a> </small>",
+            "nodeConnectionTimeout": "No se pudo iniciar un nodo WhaleCoin!<br><small>Si <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>has instalado Geth</a>, utiliza este comando para ejecutarlo: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> O informa del problema </a></small>",
+            "nodeBinaryNotFound": "No se ha encontrado el binario del nodo WhaleCoin!<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Por favor, inicie antes uno manualmente. </a> </small>",
             "nodeSyncing": "El nodo de WhaleCoin necesita sincronizarse, por favor espere...",
             "nodeSyncInfo": "Descargando bloque __displayBlock__ de __highestBlock__.",
             "nodeSyncConnecting": "Buscando pares...",
@@ -178,7 +178,7 @@
                 "estimatedFee": "Tasa de comisión estimada",
                 "estimatedGasError": "Los datos no pueden ser ejecutados por lo que se utilizá todo el gas proporcionado.",
                 "gasPrice": "Precio del Gas",
-                "perMillionGas": "ether por millón de gas",
+                "perMillionGas": "WhaleCoin por millón de gas",
                 "gasLimit": "Proporcionar la tasa máxima",
                 "data": "Datos",
                 "buttons": {
@@ -188,7 +188,7 @@
                     "connectionTimeout": "No se pudo conectar al nodo, ha dejado de funcionar en segundo plano?",
                     "wrongPassword": "Contraseña incorrecta",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -204,11 +204,11 @@
             "onboarding": {
                 "description": "WhaleCoin es una plataforma descentralizada para la construcción de aplicaciones en una blockchain: segura y a prueba de manipulaciones que puede transferir valor, propiedad y vive para siempre",
                 "goToTestnet": "Utiliza la red de pruebas (Rinkeby)",
-                "goToTestnetDescription": "Pruebe la tecnología libremente en una red de pruebas sin utilizar ether reales.",
+                "goToTestnetDescription": "Pruebe la tecnología libremente en una red de pruebas sin utilizar WhaleCoin reales.",
                 "gotoMainnet": "Utilizar la red principal",
-                "gotoMainnetDescription": " Necesitarás algunos Ether para poder crear y ejecutar contratos. No se preocupe, nosotros le ayudaremos a obtener algunos...",
+                "gotoMainnetDescription": " Necesitarás algunos WhaleCoin para poder crear y ejecutar contratos. No se preocupe, nosotros le ayudaremos a obtener algunos...",
                 "doYouHaveAWalletFile": "¿Tiene un archivo de monedero?",
-                "walletFileDescription": "<p>Si participaste en la preventa de WhaleCoin en 2014, deberías tener un archivo llamado <code>ethereum_wallet_backup.json</code>. Se descargó después de la venta y también se envió a su correo electrónico.</p>",
+                "walletFileDescription": "<p>Si participaste en la preventa de WhaleCoin en 2014, deberías tener un archivo llamado <code>WhaleCoin_wallet_backup.json</code>. Se descargó después de la venta y también se envió a su correo electrónico.</p>",
                 "dropFilesHere": "Soltar el archivo de la pre-venta",
                 "creating": "Creando...",
                 "importing": "Importando...",
@@ -218,11 +218,11 @@
                 "protectDescription": "Elija una contraseña para su nueva cuenta que sea tan fuerte como si fuera a proteger las llaves de su casa!",
                 "accountTitle": "Cargarla!",
                 "accountTitleTestnet": "Minar algunos!",
-                "etherDescription": "La red ethereum está basada en un token llamado “Ether”. Necesitarás una pequeña cantidad de él para hacer cualquier cosa en la red WhaleCoin.",
-                "loadItDescription": "Si ya dispone de Bitcoin o cualquier otra criptomoneda, puede convertirlas fácilmente a ether utilizando shapeshift. <br><br> Recomendamos una cuantía de entre <strong>0.25 a 1 ether</strong>.",
-                "mineItDescription": "<strong>En la red de pruebas puedes minar ether tú mismo desde el menú <em>Desarrollar</em> y eligiendo <em>Empezar a minar</em>. </strong> <br> <strong> NO INTENTE ENVIAR ETHER REALES A ESTA DIRECCIÓN </strong>",
+                "WhaleCoinDescription": "La red WhaleCoin está basada en un token llamado “WhaleCoin”. Necesitarás una pequeña cantidad de él para hacer cualquier cosa en la red WhaleCoin.",
+                "loadItDescription": "Si ya dispone de Bitcoin o cualquier otra criptomoneda, puede convertirlas fácilmente a WhaleCoin utilizando shapeshift. <br><br> Recomendamos una cuantía de entre <strong>0.25 a 1 WhaleCoin</strong>.",
+                "mineItDescription": "<strong>En la red de pruebas puedes minar WhaleCoin tú mismo desde el menú <em>Desarrollar</em> y eligiendo <em>Empezar a minar</em>. </strong> <br> <strong> NO INTENTE ENVIAR WhaleCoin REALES A ESTA DIRECCIÓN </strong>",
                 "you": "TÚ",
-                "etherbase": "Cuenta principal (etherbase)",
+                "WhaleCoinbase": "Cuenta principal (WhaleCoinbase)",
                 "depositBitcoin": "Depositar Bitcoin",
                 "learnIt": "Aprenda mientras espera",
                 "downloadingBlocks": "Descargando bloques",
