--- a/interface/i18n/mist.fa.i18n.json
+++ b/interface/i18n/mist.fa.i18n.json
@@ -44,7 +44,7 @@
                 "runTests": "Run tests",
                 "logFiles": "Show log file",
                 "externalNode": "using external node",
-                "ethereumNode": "WhaleCoin Node",
+                "WhaleCoinNode": "WhaleCoin Node",
                 "network": "Network",
                 "mainNetwork": "Main Network",
                 "startMining": "⛏ Start Mining (Testnet only)",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin Classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin Classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -99,8 +99,8 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "testnetExplain": "You are on the testnet, DO NOT SEND any real Ether to these addresses",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real Ether to these addresses",
+            "testnetExplain": "You are on the testnet, DO NOT SEND any real WhaleCoin to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on",
             "peers": "peers"
         },
@@ -120,8 +120,8 @@
             "startingNode": "Starting WhaleCoin node...",
             "stoppingNode": "Stopping WhaleCoin node...",
             "startedNode": "Starting application...",
-            "nodeConnectionTimeout": "Couldn't start WhaleCoin node!<br><small>If you <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>installed Geth</a>, use this command to run it: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Or report an issue </a></small>",
-            "nodeBinaryNotFound": "No WhaleCoin node binary found!<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Please start one manually before. </a> </small>",
+            "nodeConnectionTimeout": "Couldn't start WhaleCoin node!<br><small>If you <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>installed Geth</a>, use this command to run it: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Or report an issue </a></small>",
+            "nodeBinaryNotFound": "No WhaleCoin node binary found!<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Please start one manually before. </a> </small>",
             "nodeStarting": "WhaleCoin node starting up...",
             "nodeStarted": "WhaleCoin node started",
             "nodeConnected": "WhaleCoin node connected",
@@ -192,7 +192,7 @@
                 "transactionThrow": "The contract won't allow this transaction to be executed",
                 "noEstimate": "We couldn't estimate the gas.",
                 "gasPrice": "Gas price",
-                "perMillionGas": "ether per million gas",
+                "perMillionGas": "WhaleCoin per million gas",
                 "gasLimit": "Provide maximum fee",
                 "data": "Raw Data",
                 "parameters": "Parameters",
@@ -203,7 +203,7 @@
                     "connectionTimeout": "Couldn't connect to the node, did it crash in the background?",
                     "wrongPassword": "Wrong password",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "showRawBytecode": "show raw data",
@@ -216,11 +216,11 @@
             "onboarding": {
                 "description": "WhaleCoin is a public blockchain that features a turing complete programming for building solid, decentralized applications.",
                 "goToTestnet": "Use the test network (Rinkeby)",
-                "goToTestnetDescription": "Test the technology freely in a sandboxed testnet, without using real ether.",
+                "goToTestnetDescription": "Test the technology freely in a sandboxed testnet, without using real WhaleCoin.",
                 "gotoMainnet": "Use the main network",
-                "gotoMainnetDescription": "You’ll need some Ether in order to create and execute contracts. Don't worry, we'll help you get some...",
+                "gotoMainnetDescription": "You’ll need some WhaleCoin in order to create and execute contracts. Don't worry, we'll help you get some...",
                 "doYouHaveAWalletFile": "Do you have a wallet file?",
-                "walletFileDescription": "<p>If you participated on the WhaleCoin Pre-sale 2014, you should have a file named <code>ethereum_wallet_backup.json</code>. It was downloaded after the sale and also sent to your email</p>",
+                "walletFileDescription": "<p>If you participated on the WhaleCoin Pre-sale 2014, you should have a file named <code>WhaleCoin_wallet_backup.json</code>. It was downloaded after the sale and also sent to your email</p>",
                 "dropFilesHere": "Drop pre-sale file",
                 "creating": "Creating...",
                 "importing": "Importing...",
@@ -230,11 +230,11 @@
                 "protectDescription": "Choose a password for your new account. Make it as strong as if it would protect your house keys!",
                 "accountTitle": "Load it up!",
                 "accountTitleTestnet": "Mine some!",
-                "etherDescription": "The ethereum network is based on token called “Ether”. You’ll need a small amount of it to do anything on the WhaleCoin network.",
-                "loadItDescription": "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to ether using shapeshift. <br><br> We recommend loading somewhere between <strong>0.25 to 1 ether</strong>.",
-                "mineItDescription": "<strong>On the testnet you can mine ether yourself by going to the <em>Develop</em> menu and choosing <em>Start Mining</em>. </strong> <br> <strong> DO NOT ATTEMPT TO SEND REAL ETHER TO THIS ADDRESS </strong>",
+                "WhaleCoinDescription": "The WhaleCoin network is based on token called “WhaleCoin”. You’ll need a small amount of it to do anything on the WhaleCoin network.",
+                "loadItDescription": "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to WhaleCoin using shapeshift. <br><br> We recommend loading somewhere between <strong>0.25 to 1 WhaleCoin</strong>.",
+                "mineItDescription": "<strong>On the testnet you can mine WhaleCoin yourself by going to the <em>Develop</em> menu and choosing <em>Start Mining</em>. </strong> <br> <strong> DO NOT ATTEMPT TO SEND REAL WhaleCoin TO THIS ADDRESS </strong>",
                 "you": "YOU",
-                "etherbase": "Main account (etherbase)",
+                "WhaleCoinbase": "Main account (WhaleCoinbase)",
                 "depositBitcoin": "Deposit using Bitcoin",
                 "viaShapeshift": "Instant conversion via <a href='https://shapeshift.io/' target='_blank'>Shapeshift</a>",
                 "learnIt": "Learn while you wait",
