--- a/interface/i18n/mist.fr.i18n.json
+++ b/interface/i18n/mist.fr.i18n.json
@@ -43,7 +43,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Lancer les tests",
                 "logFiles": "Afficher le journal de log",
-                "ethereumNode": "Nœud WhaleCoin",
+                "WhaleCoinNode": "Nœud WhaleCoin",
                 "network": "Réseau",
                 "mainNetwork": "Réseau principal",
                 "startMining": "⛏ Commencer à miner (seulement pour Testnet)",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -100,8 +100,8 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "testnetExplain": "You are on the testnet, DO NOT SEND any real ether to these addresses",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "testnetExplain": "You are on the testnet, DO NOT SEND any real WhaleCoin to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -119,8 +119,8 @@
             "runningNodeFound": "Nœud WhaleCoin actif trouvé !",
             "startingNode": "Démarrage du nœud WhaleCoin en cours...",
             "startedNode": "Démarrage de l'application...",
-            "nodeConnectionTimeout": "Echec du démarrage du nœud WhaleCoin !<br><small>Si vous <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>avez installé Geth</a>, utilisez cette commande pour le lancer : <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Ou signalez le problème </a></small>",
-            "nodeBinaryNotFound": "Pas de binaire du nœud WhaleCoin trouvé !<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Veuillez en lancer d'abord un manuellement. </a> </small>",
+            "nodeConnectionTimeout": "Echec du démarrage du nœud WhaleCoin !<br><small>Si vous <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>avez installé Geth</a>, utilisez cette commande pour le lancer : <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Ou signalez le problème </a></small>",
+            "nodeBinaryNotFound": "Pas de binaire du nœud WhaleCoin trouvé !<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Veuillez en lancer d'abord un manuellement. </a> </small>",
             "nodeSyncing": "Le nœud WhaleCoin se synchronise, veuillez patienter...",
             "nodeSyncInfo": "Télechargement du bloc __displayBlock__ depuis le bloc __highestBlock__.",
             "nodeSyncConnecting": "À la recherche de pairs...",
@@ -178,7 +178,7 @@
                 "estimatedFee": "Taxe de consommation estimée",
                 "estimatedGasError": "Les données n'ont pas pu être executées et vont donc utiliser tout le gaz fourni.",
                 "gasPrice": "Prix du gaz",
-                "perMillionGas": "ether par million de gaz",
+                "perMillionGas": "WhaleCoin par million de gaz",
                 "gasLimit": "Fournir la taxe maximum",
                 "data": "Données",
                 "buttons": {
@@ -188,7 +188,7 @@
                     "connectionTimeout": "La connexion au nœud n'a pas pu s'établir, est-ce un plantage dans l'arrière-plan ?",
                     "wrongPassword": "Mauvais mot de passe",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -204,11 +204,11 @@
             "onboarding": {
                 "description": "WhaleCoin est une plateforme décentralisée pour la création d'applications sur une blockchain (chaîne de blocs) : logiciel inviolable qui peut transférer de la valeur et de la propriété et qui vit pour toujours",
                 "goToTestnet": "Utiliser le réseau Testnet (Rinkeby)",
-                "goToTestnetDescription": "Testez la technologie librement sur le réseau sandboxé (bac à sable), sans utiliser d'ether réel.",
+                "goToTestnetDescription": "Testez la technologie librement sur le réseau sandboxé (bac à sable), sans utiliser d'WhaleCoin réel.",
                 "gotoMainnet": "Utiliser le réseau réel",
-                "gotoMainnetDescription": "Vous aurez besoin de quelques Ether afin de créer et exécuter des contrats. Ne vous en faites pas, nous allons vous aider à en obtenir...",
+                "gotoMainnetDescription": "Vous aurez besoin de quelques WhaleCoin afin de créer et exécuter des contrats. Ne vous en faites pas, nous allons vous aider à en obtenir...",
                 "doYouHaveAWalletFile": "Avez-vous un fichier wallet ?",
-                "walletFileDescription": "<p>Si vous avez participé à la prévente WhaleCoin 2014, vous devriez avoir un fichier nommé <code>ethereum_wallet_backup.json</code>. Il a été téléchargé après la vente et vous a aussi été envoyé par e-mail</p>",
+                "walletFileDescription": "<p>Si vous avez participé à la prévente WhaleCoin 2014, vous devriez avoir un fichier nommé <code>WhaleCoin_wallet_backup.json</code>. Il a été téléchargé après la vente et vous a aussi été envoyé par e-mail</p>",
                 "dropFilesHere": "Déposer un fichier de prévente ici",
                 "creating": "Création...",
                 "importing": "Importation...",
@@ -218,11 +218,11 @@
                 "protectDescription": "Choisissez un mot de passe pour votre nouveau compte. Rendez-le aussi fort que s'il protégeait les clés de votre maison !",
                 "accountTitle": "Chargez le !",
                 "accountTitleTestnet": "Minez-en quelques-uns !",
-                "etherDescription": "Le réseau ethereum est basé sur un token (jeton) appelé “Ether”. Vous aurez besoin d'un petit montant de cela pour faire ce que vous souhaitez sur le réseau WhaleCoin.",
-                "loadItDescription": "Si vous possédez déjà des Bitcoin, ou n'importe quel autre crypto-monnaie, vous pouvez facilement les convertir en ether en utilisant shapeshift. <br><br> Nous recommandons d'en charger de <strong>0.25 à 1 ether</strong>.",
-                "mineItDescription": "<strong>Sur le réseau Testnet vous pouvez miner de l'ether vous-même en allant sur le menu <em>Développement</em> et en choisissant <em>Commencer à miner</em>. </strong> <br> <strong> N'ESSAYEZ PAS D'ENVOYER DU VERITABLE ETHER A CETTE ADRESSE </strong>",
+                "WhaleCoinDescription": "Le réseau WhaleCoin est basé sur un token (jeton) appelé “WhaleCoin”. Vous aurez besoin d'un petit montant de cela pour faire ce que vous souhaitez sur le réseau WhaleCoin.",
+                "loadItDescription": "Si vous possédez déjà des Bitcoin, ou n'importe quel autre crypto-monnaie, vous pouvez facilement les convertir en WhaleCoin en utilisant shapeshift. <br><br> Nous recommandons d'en charger de <strong>0.25 à 1 WhaleCoin</strong>.",
+                "mineItDescription": "<strong>Sur le réseau Testnet vous pouvez miner de l'WhaleCoin vous-même en allant sur le menu <em>Développement</em> et en choisissant <em>Commencer à miner</em>. </strong> <br> <strong> N'ESSAYEZ PAS D'ENVOYER DU VERITABLE WhaleCoin A CETTE ADRESSE </strong>",
                 "you": "VOUS",
-                "etherbase": "Compte principal (etherbase)",
+                "WhaleCoinbase": "Compte principal (WhaleCoinbase)",
                 "depositBitcoin": "Déposer des Bitcoin",
                 "learnIt": "Apprenez pendant que vous patientez",
                 "downloadingBlocks": "Téléchargement de blocs",
