--- a/interface/i18n/mist.nl.i18n.json
+++ b/interface/i18n/mist.nl.i18n.json
@@ -63,7 +63,7 @@
                 "logFiles": "Toon log bestand",
                 "openRemix": "Open Remix IDE",
                 "externalNode": "Externe Node in gebruik",
-                "ethereumNode": "WhaleCoin Node",
+                "WhaleCoinNode": "WhaleCoin Node",
                 "network": "Netwerk",
                 "nodeMode": "Chain download",
                 "fullNode": "Bewaar volledige blockchain",
@@ -99,7 +99,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain gedetecteerd",
-                "description": "Je node draait momenteel op de niet ondersteunde WhaleCoin Classic chain. Om deze chain te gebruiken dien je de tools te gebruiken van het WhaleCoin Classic project op\nhttps://ethereumclassic.github.io.\n\nOm terug te gaan naar de standaard WhaleCoin chain kun je deze tutorial volgen:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Je node draait momenteel op de niet ondersteunde WhaleCoin Classic chain. Om deze chain te gebruiken dien je de tools te gebruiken van het WhaleCoin Classic project op\nhttps://WhaleCoinclassic.github.io.\n\nOm terug te gaan naar de standaard WhaleCoin chain kun je deze tutorial volgen:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -117,8 +117,8 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "Je zit op het main WhaleCoin wereldwijde netwerk",
-            "testnetExplain": "Je bent actief op het __name__, VERSTUUR GEEN echte Ether naar deze adressen",
-            "privatenetExplain": "Je zit op een private net, VERSTUUR GEEN echte Ether naar deze adressen",
+            "testnetExplain": "Je bent actief op het __name__, VERSTUUR GEEN echte WhaleCoin naar deze adressen",
+            "privatenetExplain": "Je zit op een private net, VERSTUUR GEEN echte WhaleCoin naar deze adressen",
             "unknownnetExplain": "Niet in staat om te bepalen op welk netwerk je zit",
             "peers": "peers"
         },
@@ -138,8 +138,8 @@
             "startingNode": "WhaleCoin node starten...",
             "stoppingNode": "WhaleCoin node stoppen...",
             "startedNode": "Applicatie starten...",
-            "nodeConnectionTimeout": "WhaleCoin node opstarten niet mogelijk!<br><small>Als je <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>Geth geinstalleerd hebt</a>, gebruik dan dit commando om het op te starten: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Of meld een fout </a></small>",
-            "nodeBinaryNotFound": "Geen WhaleCoin node gevonden!<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Start er a.u.b. handmatig een. </a> </small>",
+            "nodeConnectionTimeout": "WhaleCoin node opstarten niet mogelijk!<br><small>Als je <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>Geth geinstalleerd hebt</a>, gebruik dan dit commando om het op te starten: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Of meld een fout </a></small>",
+            "nodeBinaryNotFound": "Geen WhaleCoin node gevonden!<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Start er a.u.b. handmatig een. </a> </small>",
             "nodeStarting": "WhaleCoin node opstarten...",
             "nodeStarted": "WhaleCoin node gestart",
             "nodeConnected": "WhaleCoin node verbonden",
@@ -210,7 +210,7 @@
                 "transactionThrow": "Het contract staat niet toe dat deze transactie wordt uitgevoerd",
                 "noEstimate": "We konden de hoeveelheid gas niet inschatten.",
                 "gasPrice": "Gas prijs",
-                "perMillionGas": "Ether per millioen gas",
+                "perMillionGas": "WhaleCoin per millioen gas",
                 "gasLimit": "Geef maximum transactie kosten aan",
                 "data": "Ruwe Data",
                 "parameters": "Parameters",
@@ -221,7 +221,7 @@
                     "connectionTimeout": "Kon niet verbinden met de node, is het in de achtergrond uitgevallen?",
                     "wrongPassword": "Onjuist wachtwoord",
                     "multipleKeysMatchAddress": "Meerdere keys matchen hebben hetzelfde adres, verwijder duplicaten uit de keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Onvoldoende saldo in hoofd account (Etherbase) om gas te betalen",
+                    "insufficientFundsForGas": "Onvoldoende saldo in hoofd account (WhaleCoinbase) om gas te betalen",
                     "sameAccount": "Kan niet naar zichzelf versturen"
                 },
                 "showRawBytecode": "Toon ruwe data",
@@ -234,11 +234,11 @@
             "onboarding": {
                 "description": "WhaleCoin is een decentraal platform voor het bouwen van applicaties op een blockchain: software die immuun is voor fraude en levenslang waarde en eigendom over kan brengen",
                 "goToTestnet": "Gebruik het test netwerk (Rinkeby)",
-                "goToTestnetDescription": "Test de technologie vrij in een testongeving, zonder echte Ether te gebruiken.",
+                "goToTestnetDescription": "Test de technologie vrij in een testongeving, zonder echte WhaleCoin te gebruiken.",
                 "gotoMainnet": "Gebruik hoofdnetwerk",
-                "gotoMainnetDescription": "Je zult een beetje Ether nodig hebben om contracten uit te voeren. Geen zorgen, we helpen je met het verkrijgen...",
+                "gotoMainnetDescription": "Je zult een beetje WhaleCoin nodig hebben om contracten uit te voeren. Geen zorgen, we helpen je met het verkrijgen...",
                 "doYouHaveAWalletFile": "Heb je een wallet bestand?",
-                "walletFileDescription": "<p>Als je mee hebt gedaan met de WhaleCoin voorverkoop van 2014 zou je een bestand met de naam <code>ethereum_wallet_backup.json</code> ontvangen moeten hebben. Je kon dit bestand downloaden na je contributie en is ook per email verstuurd</p>",
+                "walletFileDescription": "<p>Als je mee hebt gedaan met de WhaleCoin voorverkoop van 2014 zou je een bestand met de naam <code>WhaleCoin_wallet_backup.json</code> ontvangen moeten hebben. Je kon dit bestand downloaden na je contributie en is ook per email verstuurd</p>",
                 "dropFilesHere": "Sleep voorverkoop bestand hier",
                 "creating": "Aanmaken...",
                 "importing": "Importeren...",
@@ -248,11 +248,11 @@
                 "protectDescription": "Kies een wachtwoord voor je nieuwe account. Maak het even veilig alsof het uw huissleutels zijn!",
                 "accountTitle": "Opladen!",
                 "accountTitleTestnet": "Mine wat!",
-                "etherDescription": "Het WhaleCoin netwerk is gebaseerd op het “Ether” token. Je zal een kleine hoeveelheid nodig hebben om dingen op het netwerk te doen.",
-                "loadItDescription": "Als je al Bitcoins of een andere cryptocurrency hebt kan je deze makkelijk inwisselen voor Ether met Shapeshift.<br><br> Wij raden aan een hoeveelheid van tussen de <strong>0.25 en 1 Ether</strong> om te wisselen.",
-                "mineItDescription": "<strong>Op het testnetwerk kun je zelf Ether mijnen door te gaan naar het <em>Ontwikkelaars</em> menu en te kiezen voor <em>Begin Mining</em>. </strong> <br> <strong> PROBEER GEEN ECHTE ETHER NAAR DIT ADRES TE VERSTUREN </strong>",
+                "WhaleCoinDescription": "Het WhaleCoin netwerk is gebaseerd op het “WhaleCoin” token. Je zal een kleine hoeveelheid nodig hebben om dingen op het netwerk te doen.",
+                "loadItDescription": "Als je al Bitcoins of een andere cryptocurrency hebt kan je deze makkelijk inwisselen voor WhaleCoin met Shapeshift.<br><br> Wij raden aan een hoeveelheid van tussen de <strong>0.25 en 1 WhaleCoin</strong> om te wisselen.",
+                "mineItDescription": "<strong>Op het testnetwerk kun je zelf WhaleCoin mijnen door te gaan naar het <em>Ontwikkelaars</em> menu en te kiezen voor <em>Begin Mining</em>. </strong> <br> <strong> PROBEER GEEN ECHTE WhaleCoin NAAR DIT ADRES TE VERSTUREN </strong>",
                 "you": "Je",
-                "etherbase": "Centrale account (Etherbase)",
+                "WhaleCoinbase": "Centrale account (WhaleCoinbase)",
                 "depositBitcoin": "Bitcoin Storten",
                 "viaShapeshift": "Direct omwisselen via <a href='https://shapeshift.io/' target='_blank'>Shapeshift</a>",
                 "learnIt": "Leer terwijl je wacht",
