--- a/interface/i18n/mist.zh-TW.i18n.json
+++ b/interface/i18n/mist.zh-TW.i18n.json
@@ -43,7 +43,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "運行測試",
                 "logFiles": "顯示日誌文件",
-                "ethereumNode": "以太坊節點",
+                "WhaleCoinNode": "以太坊節點",
                 "network": "網路",
                 "mainNetwork": "主網路",
                 "startMining": "⛏ 開啓挖礦（僅限Testnet網路）",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -101,7 +101,7 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -119,8 +119,8 @@
             "runningNodeFound": "發現正在運行的以太坊節點！",
             "startingNode": "正在開啓以太坊節點……",
             "startedNode": "正在啓動應用程序……",
-            "nodeConnectionTimeout": "無法開啓以太坊節點！<br><small>如果您已經<a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>安裝Geth</a>，使用此命令運行： <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> 或者上報此問題 </a></small>",
-            "nodeBinaryNotFound": "找不到以太坊節點安裝文件！<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> 請事先手動開啓一個節點 </a> </small>",
+            "nodeConnectionTimeout": "無法開啓以太坊節點！<br><small>如果您已經<a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>安裝Geth</a>，使用此命令運行： <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> 或者上報此問題 </a></small>",
+            "nodeBinaryNotFound": "找不到以太坊節點安裝文件！<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> 請事先手動開啓一個節點 </a> </small>",
             "nodeSyncing": "需要同步以太坊節點，請等待……",
             "nodeSyncInfo": "正在下載第__displayBlock__塊，共__highestBlock__。",
             "nodeSyncConnecting": "正在查找節點……",
@@ -188,7 +188,7 @@
                     "connectionTimeout": "無法連接該節點，後台節點是否崩潰了？",
                     "wrongPassword": "密碼錯誤",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -208,7 +208,7 @@
                 "gotoMainnet": "使用主網路",
                 "gotoMainnetDescription": "您需要一些以太幣來創建和執行合約。別擔心，我們將幫您獲取一些……",
                 "doYouHaveAWalletFile": "您擁有一個錢包文件嗎？",
-                "walletFileDescription": "<p>如果您參與了2014年的以太坊預售，您應該有一個文件名爲<code>ethereum_wallet_backup.json</code>的錢包文件。在您購買後已被下載並且也發送到您信箱。</p>",
+                "walletFileDescription": "<p>如果您參與了2014年的以太坊預售，您應該有一個文件名爲<code>WhaleCoin_wallet_backup.json</code>的錢包文件。在您購買後已被下載並且也發送到您信箱。</p>",
                 "dropFilesHere": "預售文件拖入此處",
                 "creating": "正在創建……",
                 "importing": "正在匯入……",
@@ -218,11 +218,11 @@
                 "protectDescription": "爲您的新帳號選擇一個密碼。請像保持您家鑰匙一樣保證密碼強度足夠安全！",
                 "accountTitle": "正在裝載！",
                 "accountTitleTestnet": "挖到一些以太幣！",
-                "etherDescription": "以太坊網路是基於一種叫做“以太幣”的代幣。您需要一點以太幣來嘗試在以太坊網路上的任何操作。",
+                "WhaleCoinDescription": "以太坊網路是基於一種叫做“以太幣”的代幣。您需要一點以太幣來嘗試在以太坊網路上的任何操作。",
                 "loadItDescription": "如果您已經擁有比特幣或者任何其他加密貨幣，您可以使用shapeshift來方便地轉換爲以太幣。<br><br>我們推薦您存入<strong>0.25到1以太幣</strong>.",
                 "mineItDescription": "<strong>如果您在testnet測試網路中，您可以自己挖掘一些以太幣，點擊<em>開發</em>選單並選擇<em>開啓挖礦</em>。</strong> <br> <strong>請勿將真正的以太幣發往該地址！</strong>",
                 "you": "您本人",
-                "etherbase": "主帳號（etherbase）",
+                "WhaleCoinbase": "主帳號（WhaleCoinbase）",
                 "depositBitcoin": "存入比特幣",
                 "learnIt": "在等待期間學習一下",
                 "downloadingBlocks": "正在下載區塊",
