--- a/interface/i18n/mist.en.i18n.json
+++ b/interface/i18n/mist.en.i18n.json
@@ -63,7 +63,7 @@
                 "logFiles": "Show log file",
                 "openRemix": "Open Remix IDE",
                 "externalNode": "using external node",
-                "ethereumNode": "WhaleCoin Node",
+                "WhaleCoinNode": "WhaleCoin Node",
                 "network": "Network",
                 "mainNetwork": "Main Network",
                 "nodeMode": "Chain download",
@@ -101,7 +101,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain, use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain, use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -120,8 +120,8 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "testnetExplain": "You are on the __name__. DO NOT SEND any real Ether to these addresses",
-            "privatenetExplain": "You are on a private net. DO NOT SEND any real ether to these addresses",
+            "testnetExplain": "You are on the __name__. DO NOT SEND any real WhaleCoin to these addresses",
+            "privatenetExplain": "You are on a private net. DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on",
             "peers": "peers"
         },
@@ -146,8 +146,8 @@
             "startingNode": "Starting WhaleCoin node...",
             "stoppingNode": "Stopping WhaleCoin node...",
             "startedNode": "Starting application...",
-            "nodeConnectionTimeout": "Couldn't start WhaleCoin node!<br><small>If you <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>installed Geth</a>, use this command to run it: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Or report an issue </a></small>",
-            "nodeBinaryNotFound": "No WhaleCoin node binary found!<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Please start one manually before. </a> </small>",
+            "nodeConnectionTimeout": "Couldn't start WhaleCoin node!<br><small>If you <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>installed Geth</a>, use this command to run it: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Or report an issue </a></small>",
+            "nodeBinaryNotFound": "No WhaleCoin node binary found!<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Please start one manually before. </a> </small>",
             "nodeStarting": "WhaleCoin node starting up...",
             "nodeStarted": "WhaleCoin node started",
             "nodeConnected": "WhaleCoin node connected",
@@ -221,7 +221,7 @@
                 "notEnoughGas": "Gas might not be enough to successfully finish this transaction.<br>Click here to increase the gas amount.",
                 "noEstimate": "We couldn't estimate the gas.",
                 "gasPrice": "Gas price",
-                "perMillionGas": "ether per million gas",
+                "perMillionGas": "WhaleCoin per million gas",
                 "gasLimit": "Provide maximum fee",
                 "data": "Raw Data",
                 "parameters": "Parameters",
@@ -232,7 +232,7 @@
                     "connectionTimeout": "Couldn't connect to the node, did it crash in the background?",
                     "wrongPassword": "Wrong password",
                     "multipleKeysMatchAddress": "Multiple keys match address.  Please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "showRawBytecode": "show raw data",
@@ -243,11 +243,11 @@
             "onboarding": {
                 "description": "WhaleCoin is a platform for decentralized blockchain apps with a fully featured programming language",
                 "goToTestnet": "Use the test network (Rinkeby)",
-                "goToTestnetDescription": "Test the technology freely in a sandboxed testnet, without using real Ether.",
+                "goToTestnetDescription": "Test the technology freely in a sandboxed testnet, without using real WhaleCoin.",
                 "gotoMainnet": "Use the main network",
-                "gotoMainnetDescription": "You’ll need some Ether to create and execute contracts. Don't worry, we'll help you get some...",
+                "gotoMainnetDescription": "You’ll need some WhaleCoin to create and execute contracts. Don't worry, we'll help you get some...",
                 "doYouHaveAWalletFile": "Do you have a wallet file?",
-                "walletFileDescription": "<p>Move any wallet file here to import.<br>If you participated in the WhaleCoin Pre-sale 2014, you should have a file named <code>ethereum_wallet_backup.json</code>. It was downloaded after the sale and also sent to your email</p>",
+                "walletFileDescription": "<p>Move any wallet file here to import.<br>If you participated in the WhaleCoin Pre-sale 2014, you should have a file named <code>WhaleCoin_wallet_backup.json</code>. It was downloaded after the sale and also sent to your email</p>",
                 "dropFilesHere": "Drop wallet file",
                 "creating": "Creating...",
                 "importing": "Importing...",
@@ -257,11 +257,11 @@
                 "protectDescription": "Choose a password for your new account. Make it as strong as if it were to protect your house keys!",
                 "accountTitle": "Load it up!",
                 "accountTitleTestnet": "Mine some!",
-                "etherDescription": "The ethereum network is based on a token called “Ether”. You’ll need a small amount of it to do anything on the WhaleCoin network.",
-                "loadItDescription": "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to ether using Shapeshift. <br><br> We recommend loading somewhere between <strong>0.25 to 1 ether</strong>.",
-                "faucetDescription": "The Rinkeby testnet uses Clique Proof of Authority as a consensus mechanism, therefore there's no mining. If you want to get some test ether, head to the Rinkeby Faucet: <strong> faucet.rinkeby.io </strong>",
+                "WhaleCoinDescription": "The WhaleCoin network is based on a token called “WhaleCoin”. You’ll need a small amount of it to do anything on the WhaleCoin network.",
+                "loadItDescription": "If you already own Bitcoin, or any other cryptocurrency, you can easily convert it to WhaleCoin using Shapeshift. <br><br> We recommend loading somewhere between <strong>0.25 to 1 WhaleCoin</strong>.",
+                "faucetDescription": "The Rinkeby testnet uses Clique Proof of Authority as a consensus mechanism, therefore there's no mining. If you want to get some test WhaleCoin, head to the Rinkeby Faucet: <strong> faucet.rinkeby.io </strong>",
                 "you": "YOU",
-                "etherbase": "Main account (etherbase)",
+                "WhaleCoinbase": "Main account (WhaleCoinbase)",
                 "depositBitcoin": "Deposit using Bitcoin",
                 "viaShapeshift": "Instant conversion via <a href='https://shapeshift.io/' target='_blank'>Shapeshift</a>",
                 "learnIt": "Learn while you wait",
