--- a/interface/i18n/mist.it.i18n.json
+++ b/interface/i18n/mist.it.i18n.json
@@ -43,7 +43,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Esegui Test",
                 "logFiles": "Mostra file di log",
-                "ethereumNode": "Nodo WhaleCoin",
+                "WhaleCoinNode": "Nodo WhaleCoin",
                 "network": "Rete",
                 "mainNetwork": "Rete principale",
                 "startMining": "⛏ Inizia mining (solo Testnet)",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -94,14 +94,14 @@
             "blockReceived": "Nuovo blocco ricevuto",
             "blockNumber": "Il tuo ultimo numero di blocco",
             "timeSinceBlock": "Tempo trascorso dall'ultimo blocco",
-            "testnetExplain": "Sei connesso alla testnet, NON INVIARE alcun ether a questi indirizzi",
+            "testnetExplain": "Sei connesso alla testnet, NON INVIARE alcun WhaleCoin a questi indirizzi",
             "peers": "nodi",
             "checkingWhichNetwork": "Checking network...",
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -119,8 +119,8 @@
             "runningNodeFound": "Trovato nodo WhaleCoin in esecuzione!",
             "startingNode": "Avvio nodo WhaleCoin ...",
             "startedNode": "Avvio applicazione...",
-            "nodeConnectionTimeout": "Impossibile avviare un nodo WhaleCoin!<br><small>Se <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>hai installato Geth</a>, usa questo comando per eseguirlo:<br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> o riporta il problema </a></small>",
-            "nodeBinaryNotFound": "Impossibile trovare l'eseguibile del nodo WhaleCoin !<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Per favore avvialo manualmente prima. </a> </small>",
+            "nodeConnectionTimeout": "Impossibile avviare un nodo WhaleCoin!<br><small>Se <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>hai installato Geth</a>, usa questo comando per eseguirlo:<br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> o riporta il problema </a></small>",
+            "nodeBinaryNotFound": "Impossibile trovare l'eseguibile del nodo WhaleCoin !<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Per favore avvialo manualmente prima. </a> </small>",
             "nodeSyncing": "Il nodo WhaleCoin deve sincronizzarsi, attendere prego...",
             "nodeSyncInfo": "Scaricamento blocco __displayBlock__ di __highestBlock__.",
             "nodeSyncConnecting": "Alla ricerca di nodi...",
@@ -178,7 +178,7 @@
                 "estimatedFee": "Stima consumo (commissione)",
                 "estimatedGasError": "Dati non eseguibili, quindi verra' utilizzato tutto il gas fornito.",
                 "gasPrice": "Prezzo carburante (Gas)",
-                "perMillionGas": "ether per millioni di gas",
+                "perMillionGas": "WhaleCoin per millioni di gas",
                 "gasLimit": "Imposta commissione massima",
                 "data": "Dati",
                 "buttons": {
@@ -188,7 +188,7 @@
                     "connectionTimeout": "Impossibile connettersi al nodo, é forse terminato in modo inaspettato ?",
                     "wrongPassword": "Password errata",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -204,11 +204,11 @@
             "onboarding": {
                 "description": "WhaleCoin é una piattaforma decentralizzata per costruire applicazioni sfruttando una blockchain: software a prova di manomissione che puó trasferire valore e proprietá vivendo per sempre",
                 "goToTestnet": "Usa la rete di test (Rinkeby)",
-                "goToTestnetDescription": "Prova la tecnologia liberamente utilizzando una testnet, senza l'utilizzo di vero ether.",
+                "goToTestnetDescription": "Prova la tecnologia liberamente utilizzando una testnet, senza l'utilizzo di vero WhaleCoin.",
                 "gotoMainnet": "Usa la rete principale",
-                "gotoMainnetDescription": " Avrai bisogno di un po di Ether per creare ed eseguire contratti. Non ti preoccupare, ti aiuteremo ad ottenerne un pó...",
+                "gotoMainnetDescription": " Avrai bisogno di un po di WhaleCoin per creare ed eseguire contratti. Non ti preoccupare, ti aiuteremo ad ottenerne un pó...",
                 "doYouHaveAWalletFile": "Hai un file per il wallet ?",
-                "walletFileDescription": "<p>Se hai partecipato alla pre-vendita WhaleCoin nel 2014, dovresti avere un file nominato<code>ethereum_wallet_backup.json</code>. E' stato scaricato dopo la vendita e inoltre inviato al tuo indirizzo e-mail</p>",
+                "walletFileDescription": "<p>Se hai partecipato alla pre-vendita WhaleCoin nel 2014, dovresti avere un file nominato<code>WhaleCoin_wallet_backup.json</code>. E' stato scaricato dopo la vendita e inoltre inviato al tuo indirizzo e-mail</p>",
                 "dropFilesHere": "Trascina file pre-vendita",
                 "creating": "Creazione...",
                 "importing": "Importazione...",
@@ -218,11 +218,11 @@
                 "protectDescription": "Scegli una password per il tuo nuovo account. Rendila piu complicata possibile come se dovesse proteggere le tue chiavi di casa!",
                 "accountTitle": "Stra-caricalo!",
                 "accountTitleTestnet": "Mina un pó!",
-                "etherDescription": "La rete ethereum é basata su di un token chiamato “Ether”. Avrai bisogno di una piccola quantitá di ether per fare qualsiasi cosa sulla rete WhaleCoin.",
-                "loadItDescription": "Se possiedi giá Bitcoin, o qualunque altra cryptovaluta, puoi facilmente convertirla in eth usando shapeshift. <br><br> Raccomandiamo di depositare da <strong>0.25 a 1 ether</strong>.",
-                "mineItDescription": "<strong>Sulla rete di test (testnet) puoi minare ether in autonomia utilizzando il menu' <em>Sviluppo</em> e selezionando <em>Inizia Mining</em>. </strong> <br> <strong> NON TENTARE DI INVIARE ETHER REALE A QUESTO INDIRIZZO</strong>",
+                "WhaleCoinDescription": "La rete WhaleCoin é basata su di un token chiamato “WhaleCoin”. Avrai bisogno di una piccola quantitá di WhaleCoin per fare qualsiasi cosa sulla rete WhaleCoin.",
+                "loadItDescription": "Se possiedi giá Bitcoin, o qualunque altra cryptovaluta, puoi facilmente convertirla in eth usando shapeshift. <br><br> Raccomandiamo di depositare da <strong>0.25 a 1 WhaleCoin</strong>.",
+                "mineItDescription": "<strong>Sulla rete di test (testnet) puoi minare WhaleCoin in autonomia utilizzando il menu' <em>Sviluppo</em> e selezionando <em>Inizia Mining</em>. </strong> <br> <strong> NON TENTARE DI INVIARE WhaleCoin REALE A QUESTO INDIRIZZO</strong>",
                 "you": "TU",
-                "etherbase": "Account principale (etherbase)",
+                "WhaleCoinbase": "Account principale (WhaleCoinbase)",
                 "depositBitcoin": "Deposita Bitcoin",
                 "learnIt": "Impara mentre aspetti",
                 "downloadingBlocks": "Scaricamento blocchi ",
