--- a/interface/i18n/mist.ja.i18n.json
+++ b/interface/i18n/mist.ja.i18n.json
@@ -43,7 +43,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "テストを走らせる",
                 "logFiles": "ログファイルを表示する",
-                "ethereumNode": "WhaleCoin ノード",
+                "WhaleCoinNode": "WhaleCoin ノード",
                 "network": "ネットワーク",
                 "mainNetwork": "メインネットワーク",
                 "startMining": "⛏ マイニングを始める (テストネット のみ)",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -100,8 +100,8 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "testnetExplain": "You are on the testnet, DO NOT SEND any real ether to these addresses",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "testnetExplain": "You are on the testnet, DO NOT SEND any real WhaleCoin to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -119,8 +119,8 @@
             "runningNodeFound": "走っているWhaleCoin nodeを見つけました!",
             "startingNode": "WhaleCoin ノードを開始しています。",
             "startedNode": "アプリケーションを開始しています...",
-            "nodeConnectionTimeout": "WhaleCoin nodeをスタート出来ませんでした!<br><small>もし<a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>Geth</a>をインストールしているならば,このコマンドを使ってみてください: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'>もしくは問題を報告して下さい。 </a></small>",
-            "nodeBinaryNotFound": "WhaleCoin node バイナリーが見つかりませんでした。<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> 手動でスタートして下さい。 </a> </small>",
+            "nodeConnectionTimeout": "WhaleCoin nodeをスタート出来ませんでした!<br><small>もし<a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>Geth</a>をインストールしているならば,このコマンドを使ってみてください: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'>もしくは問題を報告して下さい。 </a></small>",
+            "nodeBinaryNotFound": "WhaleCoin node バイナリーが見つかりませんでした。<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> 手動でスタートして下さい。 </a> </small>",
             "nodeSyncing": "WhaleCoin node は同期中です...",
             "nodeSyncInfo": "blockをダウンロードしています。 __displayBlock__ of __highestBlock__.",
             "nodeSyncConnecting": "ピアーを探しています。...",
@@ -178,7 +178,7 @@
                 "estimatedFee": "推定されるトランザクションフィーの消費",
                 "estimatedGasError": "データが実行できませんでした、そのため全てのgas が消費されます。",
                 "gasPrice": "ガスプライス",
-                "perMillionGas": "百万gas ごとのEther",
+                "perMillionGas": "百万gas ごとのWhaleCoin",
                 "gasLimit": "最大のフィーを提供",
                 "data": "データ",
                 "buttons": {
@@ -188,7 +188,7 @@
                     "connectionTimeout": "ノードにつなげませんでした、バックグラウンドで落ちていますか?",
                     "wrongPassword": "パスワードが間違っています",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -204,11 +204,11 @@
             "onboarding": {
                 "description": "WhaleCoin は分散型のプラットフォームで、ブロックチェーン上でアプリケーションを作成することが出来ます。価値を転送することが出来、永続的に稼働するセキュリティの高いソフトウェアを作ることが出来ます。",
                 "goToTestnet": "テストネットワークを使用する (Rinkeby)",
-                "goToTestnetDescription": "サンドボックスのテストネットで、テクノロジーを自由に使う。本当のEtherを使うことなく.",
+                "goToTestnetDescription": "サンドボックスのテストネットで、テクノロジーを自由に使う。本当のWhaleCoinを使うことなく.",
                 "gotoMainnet": "メインネットワークを使用する",
-                "gotoMainnetDescription": "コントラクトを作成して実行するためにいくらかのEtherが必要となるでしょう。心配することはありません、手に入れるためにこちらの方法があります。...",
+                "gotoMainnetDescription": "コントラクトを作成して実行するためにいくらかのWhaleCoinが必要となるでしょう。心配することはありません、手に入れるためにこちらの方法があります。...",
                 "doYouHaveAWalletFile": "ウォレットファイルを持っていますか?",
-                "walletFileDescription": "<p>もし2014年のプリセールに参加していたら、 <code>ethereum_wallet_backup.json</code>という名前のファイルを持っているはずです。プリセールのあとにダウンロードしているか、もしくはEmailにて受け取っているはずです。</p>",
+                "walletFileDescription": "<p>もし2014年のプリセールに参加していたら、 <code>WhaleCoin_wallet_backup.json</code>という名前のファイルを持っているはずです。プリセールのあとにダウンロードしているか、もしくはEmailにて受け取っているはずです。</p>",
                 "dropFilesHere": "プリセールファイルを削除する",
                 "creating": "作成しています...",
                 "importing": "...",
@@ -218,11 +218,11 @@
                 "protectDescription": "新しいアカウントのためにパスワードを作成する. 必ず強いキーにしてください!",
                 "accountTitle": "もっとダウンロードする!",
                 "accountTitleTestnet": "マイニングを行う!",
-                "etherDescription": "The ethereum network  “Ether”. WhaleCoin networkで何かを行うためには必ず必要となります。",
-                "loadItDescription": "既にもし Bitcoinを持っているか, もしくは他の暗号通貨を持っている場合には簡単にShapeshiftから変換する事ができます。 <br><br> 私たちは <strong>0.25 to 1 ether</strong>を変換することをおすすめします.",
-                "mineItDescription": "<strong>テストネットでは自分自身でマイニングを行うか、 <em>Develop</em> メニューから <em>マイニングを始める</em>を選んで. </strong> <br> <strong> 絶対にこのアドレスにはEtherを送らないでください </strong>",
+                "WhaleCoinDescription": "The WhaleCoin network  “WhaleCoin”. WhaleCoin networkで何かを行うためには必ず必要となります。",
+                "loadItDescription": "既にもし Bitcoinを持っているか, もしくは他の暗号通貨を持っている場合には簡単にShapeshiftから変換する事ができます。 <br><br> 私たちは <strong>0.25 to 1 WhaleCoin</strong>を変換することをおすすめします.",
+                "mineItDescription": "<strong>テストネットでは自分自身でマイニングを行うか、 <em>Develop</em> メニューから <em>マイニングを始める</em>を選んで. </strong> <br> <strong> 絶対にこのアドレスにはWhaleCoinを送らないでください </strong>",
                 "you": "あなた",
-                "etherbase": "メインアカウント(etherbase)",
+                "WhaleCoinbase": "メインアカウント(WhaleCoinbase)",
                 "depositBitcoin": "Bitcoinをデポジットする",
                 "learnIt": "待っている間にWhaleCoinWalletのことを学ぶ",
                 "downloadingBlocks": "ブロックをダウンロードする",
