--- a/interface/i18n/mist.pt.i18n.json
+++ b/interface/i18n/mist.pt.i18n.json
@@ -44,7 +44,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "Realizar testes",
                 "logFiles": "Mostrar arquivos de logs",
-                "ethereumNode": "Node",
+                "WhaleCoinNode": "Node",
                 "network": "Rede",
                 "mainNetwork": "Rede principal",
                 "startMining": "⛏ Iniciar mineração (somente em teste)",
@@ -82,7 +82,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -95,14 +95,14 @@
             "blockReceived": "Novo bloco recebido",
             "timeSinceBlock": "Tempo corrido desde último bloco",
             "blockNumber": "Número de seu bloco atual",
-            "testnetExplain": "Você está na rede de teste, NÃO ENVIE ethers de verdade para essas contas",
+            "testnetExplain": "Você está na rede de teste, NÃO ENVIE WhaleCoins de verdade para essas contas",
             "peers": "nós",
             "checkingWhichNetwork": "Checking network...",
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -120,8 +120,8 @@
             "runningNodeFound": "Node WhaleCoin encontrado!",
             "startingNode": "Iniciando Node...",
             "startedNode": "Iniciando aplicativo...",
-            "nodeConnectionTimeout": "Não pode inicializar um Node!<br><small> Instale <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>um manualmente</a>, e use esse comando para executa-lo: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Caso não consiga, entre em contato </a></small>",
-            "nodeBinaryNotFound": "Nó não encontrado!<br><small><a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>Instale um manualmente</a></small>",
+            "nodeConnectionTimeout": "Não pode inicializar um Node!<br><small> Instale <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>um manualmente</a>, e use esse comando para executa-lo: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Caso não consiga, entre em contato </a></small>",
+            "nodeBinaryNotFound": "Nó não encontrado!<br><small><a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>Instale um manualmente</a></small>",
             "nodeSyncing": "Sincronizando, favor aguarde...",
             "nodeSyncInfoStates": "Carregando bloco __displayBlock__ de __highestBlock__, <br> Lendo estrutura __displayState__ de __displayKnownStates__",
             "nodeSyncInfo": "Carregando bloco  __displayBlock__ de __highestBlock__.",
@@ -179,7 +179,7 @@
                 "estimatedFee": "Taxa estimada",
                 "estimatedGasError": "Transação inválida, se executada irá gastar todo o combustível dado.",
                 "gasPrice": "Preço do combustível",
-                "perMillionGas": "ether por milhão de combustível",
+                "perMillionGas": "WhaleCoin por milhão de combustível",
                 "gasLimit": "Providenciar taxa máxima",
                 "data": "Dados",
                 "buttons": {
@@ -189,7 +189,7 @@
                     "connectionTimeout": "Não pode se conectar com Node, é possível que tenha sido interrompido pelo sistema",
                     "wrongPassword": "Senha errada",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -207,9 +207,9 @@
                 "goToTestnet": "Usar a rede de teste (Rinkeby)",
                 "goToTestnetDescription": "Experimente a tecnologia usando uma rede de teste sem valores reais.",
                 "gotoMainnet": "Usar a rede WhaleCoin principal",
-                "gotoMainnetDescription": "Você irá precisar de ether para executar contratos. Não se preocupe, iremos lhe ajudar com isso",
+                "gotoMainnetDescription": "Você irá precisar de WhaleCoin para executar contratos. Não se preocupe, iremos lhe ajudar com isso",
                 "doYouHaveAWalletFile": "Você tem um arquivo de conta?",
-                "walletFileDescription": "<p>Se você participou da pré-venda de ether em 2014, você deve ter um arquivo chamado  <code>ethereum_wallet_backup.json</code>. Além de fazer o download, esse arquivo também foi enviado para o seu email na época</p>",
+                "walletFileDescription": "<p>Se você participou da pré-venda de WhaleCoin em 2014, você deve ter um arquivo chamado  <code>WhaleCoin_wallet_backup.json</code>. Além de fazer o download, esse arquivo também foi enviado para o seu email na época</p>",
                 "dropFilesHere": "Largar arquivo de pré-venda",
                 "creating": "Criando...",
                 "importing": "Importando...",
@@ -219,11 +219,11 @@
                 "protectDescription": "Crie uma senha para sua conta nova. Escolha uma senha forte como se fosse guardar a porta da sua casa",
                 "accountTitle": "Adicione crédito",
                 "accountTitleTestnet": "Faça mineração",
-                "etherDescription": "A rede WhaleCoin usa ether como uma unidade de troca entre criadores e processadores de contratos. Você não precisa obter uma quantidade muito grande de ether para poder realizar funções na rede.",
-                "loadItDescription": "Se você já tem Bitcoin ou outra criptomoeda, a forma mais simples de convertê-la é usando ShapeShift. <br><br> Recomendamos carregar algo como  <strong>0.25 a 1 ether</strong>.",
-                "mineItDescription": "<strong>Na rede de teste é possível minerar ether escolhendo o menu <em>Desenvolvimento</em> e depois <em>Iniciar mineração</em>. </strong> <br> <strong> NÃO ENVIE ETHER DE VERDADE PARA ESSE ENDEREÇO </strong>",
+                "WhaleCoinDescription": "A rede WhaleCoin usa WhaleCoin como uma unidade de troca entre criadores e processadores de contratos. Você não precisa obter uma quantidade muito grande de WhaleCoin para poder realizar funções na rede.",
+                "loadItDescription": "Se você já tem Bitcoin ou outra criptomoeda, a forma mais simples de convertê-la é usando ShapeShift. <br><br> Recomendamos carregar algo como  <strong>0.25 a 1 WhaleCoin</strong>.",
+                "mineItDescription": "<strong>Na rede de teste é possível minerar WhaleCoin escolhendo o menu <em>Desenvolvimento</em> e depois <em>Iniciar mineração</em>. </strong> <br> <strong> NÃO ENVIE WhaleCoin DE VERDADE PARA ESSE ENDEREÇO </strong>",
                 "you": "VOCÊ",
-                "etherbase": "Conta principal (etherbase)",
+                "WhaleCoinbase": "Conta principal (WhaleCoinbase)",
                 "depositBitcoin": "Depositar Bitcoin",
                 "learnIt": "Leia enquanto você aguarda",
                 "downloadingBlocks": "Baixando blocos",
