--- a/interface/i18n/mist.sq.i18n.json
+++ b/interface/i18n/mist.sq.i18n.json
@@ -45,7 +45,7 @@
                 "logFiles": "Trego skedarin me të dhënat e regjistruara",
                 "openRemix": "Hap IDE-në Remix",
                 "externalNode": "duke përdorur nyje të jashtme",
-                "ethereumNode": "Nyje WhaleCoin",
+                "WhaleCoinNode": "Nyje WhaleCoin",
                 "network": "Rrjet",
                 "mainNetwork": "Rrjeti kryesor",
                 "nodeMode": "Shkarkim zinxhir",
@@ -83,7 +83,7 @@
             },
             "legacyChain": {
                 "title": "U zbulua zinxhir i vjetër",
-                "description": "Nyja juaj ndodhet në zinxhirin e pasuportuar WhaleCoin Classic. Për të përdorur këtë zinxhir, përdorni mjetet e mundësuara nga projekti WhaleCoin Classic në\nhttps://ethereumclassic.github.io.\n\nPër të kaluar në zinxhirin kryesor WhaleCoin ndiqni udhëzuesin këtu:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Nyja juaj ndodhet në zinxhirin e pasuportuar WhaleCoin Classic. Për të përdorur këtë zinxhir, përdorni mjetet e mundësuara nga projekti WhaleCoin Classic në\nhttps://WhaleCoinclassic.github.io.\n\nPër të kaluar në zinxhirin kryesor WhaleCoin ndiqni udhëzuesin këtu:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -100,9 +100,9 @@
             "mainNetwork": "Main-net",
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
-            "testnetExplain": "Jeni në një rrjet testimi, MOS DËRGONI asnjë ether të vërtetë në këto adresa",
+            "testnetExplain": "Jeni në një rrjet testimi, MOS DËRGONI asnjë WhaleCoin të vërtetë në këto adresa",
             "mainnetExplain": "Jeni në rrjetin kryesor global WhaleCoin",
-            "privatenetExplain": "Jeni në një rrjet privat, MOS DËRGONI asnjë ether të vërtetë në këto adresa",
+            "privatenetExplain": "Jeni në një rrjet privat, MOS DËRGONI asnjë WhaleCoin të vërtetë në këto adresa",
             "unknownnetExplain": "Nuk mund të vlerësohet rrjeti ku ndodheni tani",
             "peers": "miq"
         },
@@ -126,8 +126,8 @@
             "runningNodeFound": "U gjet nyje WhaleCoin në punë!",
             "startingNode": "Duke krijuar nyje WhaleCoin...",
             "startedNode": "Duke nisur aplikacionin...",
-            "nodeConnectionTimeout": "Nuk mund të niset nyje WhaleCoin!<br><small>Nëse ju <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>instaluat Geth</a>, përdorni këtë komandë ta krijoni: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Ose raportoni një problem </a></small>",
-            "nodeBinaryNotFound": "Nuk u gjet nyje binare WhaleCoin!<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> Ju lutemi krijoni një manualisht më parë. </a> </small>",
+            "nodeConnectionTimeout": "Nuk mund të niset nyje WhaleCoin!<br><small>Nëse ju <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>instaluat Geth</a>, përdorni këtë komandë ta krijoni: <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> Ose raportoni një problem </a></small>",
+            "nodeBinaryNotFound": "Nuk u gjet nyje binare WhaleCoin!<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> Ju lutemi krijoni një manualisht më parë. </a> </small>",
             "nodeStarting": "Nyja WhaleCoin po niset...",
             "nodeStarted": "Nyja WhaleCoin u nis",
             "nodeConnected": "Nyja WhaleCoin u lidh",
@@ -202,7 +202,7 @@
                 "notEnoughGas": "Mund të mos ketë mjaftueshëm karburant për të përfunduar këtë transaksion me sukses.<br>Klikoni këtu për të rritur sasinë e karburantit.",
                 "noEstimate": "Nuk mund të hamendësonim sasinë e nevojshme të karburantit.",
                 "gasPrice": "Çmimi i karburantit",
-                "perMillionGas": "ether për milion karburant",
+                "perMillionGas": "WhaleCoin për milion karburant",
                 "gasLimit": "Vendos tarifë maksimale",
                 "data": "Të dhëna të paformatuara",
                 "parameters": "Parametra",
@@ -213,7 +213,7 @@
                     "connectionTimeout": "Nuk mund të lidhet me nyjen. Mos ka probleme diku?",
                     "wrongPassword": "Fjalëkalim i gabuar",
                     "multipleKeysMatchAddress": "Disa  çelësa i përshtaten kësaj adrese; ju lutemi hiqni kopjet e dyfishta nga mbajtësja e çelësave (Menu -> Llogaritë -> Ruaj kopje tjetër -> Llogari)",
-                    "insufficientFundsForGas": "Fonde të pamjaftueshme në adresën kryesore (etherbase) për të paguar për karburant",
+                    "insufficientFundsForGas": "Fonde të pamjaftueshme në adresën kryesore (WhaleCoinbase) për të paguar për karburant",
                     "sameAccount": "Nuk mund t'i dërgohet vetes"
                 },
                 "showRawBytecode": "shfaq të dhënat e paformatuara",
@@ -224,11 +224,11 @@
             "onboarding": {
                 "description": "WhaleCoin është një platformë e decentralizuar për ndërtim aplikacionesh në një zinxhir blloqesh (blockchain) me gjuhën e vet të programimit",
                 "goToTestnet": "Përdor rrjetin testues (Rinkeby)",
-                "goToTestnetDescription": "Testo lirshëm teknologjinë në një rrjet test pa përdorur ether të vërtetë.",
+                "goToTestnetDescription": "Testo lirshëm teknologjinë në një rrjet test pa përdorur WhaleCoin të vërtetë.",
                 "gotoMainnet": "Përdor rrjetin kryesor",
-                "gotoMainnetDescription": " Ju do të keni nevojë për pak Ether në mënyrë që të krijoni dhe zbatoni kontrata. Mos u shqetësoni, ne do ju ndihmojmë që të gjeni sa duhet...",
+                "gotoMainnetDescription": " Ju do të keni nevojë për pak WhaleCoin në mënyrë që të krijoni dhe zbatoni kontrata. Mos u shqetësoni, ne do ju ndihmojmë që të gjeni sa duhet...",
                 "doYouHaveAWalletFile": "A keni një skedë kulete?",
-                "walletFileDescription": "<p>Nëse ju keni marrë pjesë në Parashitjen e WhaleCoinit 2014, ju duhet të keni një skedë të emëruar <code>ethereum_wallet_backup.json</code>. Eshtë shkarkuar pas shitjes dhe dërguar në emailin tuaj</p>",
+                "walletFileDescription": "<p>Nëse ju keni marrë pjesë në Parashitjen e WhaleCoinit 2014, ju duhet të keni një skedë të emëruar <code>WhaleCoin_wallet_backup.json</code>. Eshtë shkarkuar pas shitjes dhe dërguar në emailin tuaj</p>",
                 "dropFilesHere": "Vendos skedën e parashitjes",
                 "creating": "Duke krijuar...",
                 "importing": "Duke marrë...",
@@ -238,11 +238,11 @@
                 "protectDescription": "Zgjidhni një fjalëkalim për adresën tuaj të re. Krijojeni aq të fortë sa të mjaftonte për të ruajtur çelësat e shtëpisë!",
                 "accountTitle": "Ngarko",
                 "accountTitleTestnet": "Puno",
-                "etherDescription": "Rrjeti WhaleCoin bazohet në monedhën e quajtur “Ether”. Nevojitet një sasi e vogël e tij për të bërë ndonjë gjë në rrjetin WhaleCoin.",
-                "loadItDescription": "Nëse keni Bitcoin ose ndonjë kriptovalutë tjetër, mund t'i këmbeni me ether duke përdorur shapeshift. <br><br> Ne ju rekomandojmë ngarkimin e <strong>0.25 deri 1 ether</strong>.",
-                "mineItDescription": "<strong>Në rrjetin test mund të përftoni ether duke shkuar në menunë <em>Zhvillo</em> dhe duke zgjedhur <em>Fillo të punosh</em>. </strong> <br> <strong> MOS PROVONI Txxx DxxxRGONI ETHER Txxx VxxxRTETxxx Nxxx KxxxTxxx ADRESxxx </strong>",
+                "WhaleCoinDescription": "Rrjeti WhaleCoin bazohet në monedhën e quajtur “WhaleCoin”. Nevojitet një sasi e vogël e tij për të bërë ndonjë gjë në rrjetin WhaleCoin.",
+                "loadItDescription": "Nëse keni Bitcoin ose ndonjë kriptovalutë tjetër, mund t'i këmbeni me WhaleCoin duke përdorur shapeshift. <br><br> Ne ju rekomandojmë ngarkimin e <strong>0.25 deri 1 WhaleCoin</strong>.",
+                "mineItDescription": "<strong>Në rrjetin test mund të përftoni WhaleCoin duke shkuar në menunë <em>Zhvillo</em> dhe duke zgjedhur <em>Fillo të punosh</em>. </strong> <br> <strong> MOS PROVONI Txxx DxxxRGONI WhaleCoin Txxx VxxxRTETxxx Nxxx KxxxTxxx ADRESxxx </strong>",
                 "you": "JU",
-                "etherbase": "Adresa kryesore (etherbase)",
+                "WhaleCoinbase": "Adresa kryesore (WhaleCoinbase)",
                 "depositBitcoin": "Depozito Bitcoin",
                 "viaShapeshift": "Këmbim i menjëhershëm duke përdorur <a href='https://shapeshift.io/' target='_blank'>Shapeshift</a>",
                 "learnIt": "Mësoni ndërkohë që prisni",
