--- a/interface/i18n/mist.zh.i18n.json
+++ b/interface/i18n/mist.zh.i18n.json
@@ -43,7 +43,7 @@
                 "devToolsWebview": "__webview__",
                 "runTests": "运行测试",
                 "logFiles": "显示日志文件",
-                "ethereumNode": "以太坊节点",
+                "WhaleCoinNode": "以太坊节点",
                 "network": "网络",
                 "mainNetwork": "主网络",
                 "startMining": "⛏ 开启挖矿（仅限Testnet网络）",
@@ -81,7 +81,7 @@
             },
             "legacyChain": {
                 "title": "Legacy chain detected",
-                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the ethereum classic project at\nhttps://ethereumclassic.github.io.\n\nTo revert to the main ethereum chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
+                "description": "Your node is currently on the unsupported WhaleCoin Classic chain. To use this chain use tools provided by the WhaleCoin classic project at\nhttps://WhaleCoinclassic.github.io.\n\nTo revert to the main WhaleCoin chain follow the tutorial here:\nhttps://github.com/WhaleCoinOrg/mist/releases/0.8.2"
             }
         },
         "rightClick": {
@@ -101,7 +101,7 @@
             "testNetwork": "Test-net",
             "privateNetwork": "Private-net",
             "mainnetExplain": "You are on the main WhaleCoin global network",
-            "privatenetExplain": "You are on a private net, DO NOT SEND any real ether to these addresses",
+            "privatenetExplain": "You are on a private net, DO NOT SEND any real WhaleCoin to these addresses",
             "unknownnetExplain": "Unable to determine which network you are on"
         },
         "sidebar": {
@@ -119,8 +119,8 @@
             "runningNodeFound": "发现正在运行的以太坊节点！",
             "startingNode": "正在开启以太坊节点……",
             "startedNode": "正在启动应用程序……",
-            "nodeConnectionTimeout": "无法开启以太坊节点！<br><small>如果你已经<a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'>安装Geth</a>，使用此命令运行： <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> 或者上报此问题 </a></small>",
-            "nodeBinaryNotFound": "找不到以太坊节点安装文件！<br><small> <a href='https://www.ethereum.org/cli#gwhale' class='button' target='_blank'> 请事先手动开启一个节点 </a> </small>",
+            "nodeConnectionTimeout": "无法开启以太坊节点！<br><small>如果你已经<a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'>安装Geth</a>，使用此命令运行： <br> <code>gwhale --ipcpath __path__</code></small><br> <small><a href='https://github.com/WhaleCoinOrg/mist/issues' class='button' target='_blank'> 或者上报此问题 </a></small>",
+            "nodeBinaryNotFound": "找不到以太坊节点安装文件！<br><small> <a href='https://www.WhaleCoin.org/cli#gwhale' class='button' target='_blank'> 请事先手动开启一个节点 </a> </small>",
             "nodeSyncing": "需要同步以太坊节点，请等待……",
             "nodeSyncInfo": "正在下载第__displayBlock__块，共__highestBlock__。",
             "nodeSyncConnecting": "正在查找节点……",
@@ -188,7 +188,7 @@
                     "connectionTimeout": "无法连接该节点，后台节点是否可能崩溃了？",
                     "wrongPassword": "密码错误",
                     "multipleKeysMatchAddress": "Multiple keys match address, please remove duplicates from keystore (menu -> accounts -> backup -> accounts)",
-                    "insufficientFundsForGas": "Insufficient funds in main account (etherbase) to pay for gas",
+                    "insufficientFundsForGas": "Insufficient funds in main account (WhaleCoinbase) to pay for gas",
                     "sameAccount": "Can't send to itself"
                 },
                 "transactionThrow": "The contract won't allow this transaction to be executed",
@@ -208,7 +208,7 @@
                 "gotoMainnet": "使用主网络",
                 "gotoMainnetDescription": "你需要一些以太币来创建和执行合约。别担心，我们将帮你获取一些……",
                 "doYouHaveAWalletFile": "你拥有一个钱包文件吗？",
-                "walletFileDescription": "<p>如果你参与了2014年的以太坊预售，你应该有一个文件名为<code>ethereum_wallet_backup.json</code>的钱包文件。在你购买后已被下载并且也发送到你邮箱。</p>",
+                "walletFileDescription": "<p>如果你参与了2014年的以太坊预售，你应该有一个文件名为<code>WhaleCoin_wallet_backup.json</code>的钱包文件。在你购买后已被下载并且也发送到你邮箱。</p>",
                 "dropFilesHere": "预售文件拖入此处",
                 "creating": "正在创建……",
                 "importing": "正在导入……",
@@ -218,11 +218,11 @@
                 "protectDescription": "为你的新账户选择一个密码。请像保持你家钥匙一样保证密码强度足够安全！",
                 "accountTitle": "正在装载！",
                 "accountTitleTestnet": "挖到一些以太币！",
-                "etherDescription": "以太坊网络是基于一种叫做“以太币”的代币。你需要一点以太币来尝试在以太坊网络上的任何操作。",
+                "WhaleCoinDescription": "以太坊网络是基于一种叫做“以太币”的代币。你需要一点以太币来尝试在以太坊网络上的任何操作。",
                 "loadItDescription": "如果你已经拥有比特币或者任何其他加密货币，你可以使用shapeshift来方便地转换为以太币。<br><br>我们推荐你存入<strong>0.25到1以太币</strong>.",
                 "mineItDescription": "<strong>如果你在testnet测试网络中，你可以自己挖掘一些以太币，点击<em>开发</em>菜单并选择<em>开启挖矿</em>。</strong> <br> <strong>请勿将真正的以太币发往该地址！</strong>",
                 "you": "你本人",
-                "etherbase": "主账户（etherbase）",
+                "WhaleCoinbase": "主账户（WhaleCoinbase）",
                 "depositBitcoin": "存入比特币",
                 "learnIt": "在等待期间学习一下",
                 "downloadingBlocks": "正在下载区块",
